--- a/style.css
+++ b/style.css
@@ -58,3 +58,61 @@
 @media screen and (max-width: 479px) {
   #parallax-world-of-ugg .block {padding: 30px 15px; width:290px;}
 }
+footer {
+    background-color:rgb(35,25,20);
+    text-align:center;
+    color:white;
+}
+
+.accordion {
+  background-color: whitesmoke;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 20px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc; 
+}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
+
+.accordion:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: #777;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+li {
+    font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:20px; line-height:30px;
+}
+
+bold {
+    font-weight: 900;
+}
+
+img {
+    border: solid 2px black;
+    border-radius: 12%;
+}
+
+.image {
+    text-align: center;
+}
