--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 #parallax-world-of-ugg .parallax-one {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg1.jpeg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: top center;}
 #parallax-world-of-ugg .parallax-two {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg2.jpg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
 #parallax-world-of-ugg .parallax-three {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg3.jpg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
-#parallax-world-of-ugg .parallax-three {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg4.jpg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
+#parallax-world-of-ugg .parallax-four {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(parallaxbg4.jpg); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
 
 /* Extras */
 /**************************/
@@ -116,4 +116,11 @@ img {
 
 .image {
     text-align: center;
+}
+
+#parallax-world-of-ugg h4 {font-family:'Oswald', sans-serif; font-size:50px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; text-align: center;}
+a {font-family:'Oswald', sans-serif; font-size:30px; line-height:1.3; font-weight:400; letter-spacing:3px; text-transform: uppercase; color:black; text-align: center; margin: auto;  width: 100%; display:block; text-decoration:underline; text-decoration-color: sandybrown; }
+
+a:hover {
+    text-decoration-color: goldenrod;
 }
