--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ footer {
 }
 
 li {
-    font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:14px; line-height:30px;
+    font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:12px; line-height:30px; padding-bottom:3px;
 }
 
 bold {
@@ -118,14 +118,14 @@ img {
     text-align: center;
 }
 
-#parallax-world-of-ugg h4 {font-family:'Oswald', sans-serif; font-size:20px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; text-align: center;}
-a {font-family:'Oswald', sans-serif; font-size:20px; line-height:1.3; font-weight:400; letter-spacing:3px; text-transform: uppercase; color:black; text-align: center; margin: auto;  width: 100%; display:block; text-decoration:underline; text-decoration-color: sandybrown; }
+#parallax-world-of-ugg h4 {font-family:'Oswald', sans-serif; font-size:14px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; text-align: center;}
+a {font-family:'Oswald', sans-serif; font-size:14px; line-height:1.3; font-weight:400; letter-spacing:3px; text-transform: uppercase; color:black; text-align: center; margin: auto;  width: 100%; display:block; text-decoration:underline; text-decoration-color: sandybrown; }
 .faq {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:13px; line-height:24px;}
 a:hover {
     text-decoration-color: goldenrod;
 }
 
 .creditsfinal {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:15px; line-height:30px; text-align:center;color:white;}
-.middle {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:20px; line-height:30px; text-align:left;color:black;}
-.middlea {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:20px; line-height:30px; text-align:center;color:black;}
+.middle {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:14px; line-height:30px; text-align:left;color:black;}
+.middlea {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:14px; line-height:30px; text-align:center;color:black;}
 .credits {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:8px; line-height:30px; text-align:left;}
