--- a/style.css
+++ b/style.css
@@ -118,8 +118,8 @@ img {
     text-align: center;
 }
 
-#parallax-world-of-ugg h4 {font-family:'Oswald', sans-serif; font-size:14px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black; text-align: center;}
-a {font-family:'Oswald', sans-serif; font-size:14px; line-height:1.3; font-weight:400; letter-spacing:3px; text-transform: uppercase; color:black; text-align: center; margin: auto;  width: 100%; display:block; text-decoration:underline; text-decoration-color: sandybrown; }
+#parallax-world-of-ugg h4 {font-family:'Oswald', sans-serif; font-size:10px; line-height:0; font-weight:400; text-transform: uppercase; color:black; text-align: center;}
+a {font-family:'Oswald', sans-serif; font-size:12px; line-height:1.3; font-weight:400; letter-spacing:3px; color:black; text-align: center; margin: auto;  width: 100%; display:block; text-decoration:underline; text-decoration-color: sandybrown; }
 .faq {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:13px; line-height:24px;}
 a:hover {
     text-decoration-color: goldenrod;
